REOPENED251777
RealtimeMediaSource does not need to be CanMakeWeakPtr
https://bugs.webkit.org/show_bug.cgi?id=251777
Summary RealtimeMediaSource does not need to be CanMakeWeakPtr
youenn fablet
Reported 2023-02-06 00:17:27 PST
RealtimeMediaSource does not need to be CanMakeWeakPtr
Attachments
Radar WebKit Bug Importer
Comment 1 2023-02-06 00:17:44 PST
youenn fablet
Comment 2 2023-02-06 00:24:54 PST
EWS
Comment 3 2023-02-06 23:31:02 PST
Committed 259938@main (f461cca4322d): <https://commits.webkit.org/259938@main> Reviewed commits have been landed. Closing PR #9670 and removing active labels.
WebKit Commit Bot
Comment 4 2023-02-10 15:21:04 PST
Re-opened since this is blocked by bug 252084
Ryan Haddad
Comment 5 2023-02-10 16:48:59 PST
Reverted in https://commits.webkit.org/260138@main because this caused the flaky assertion failures documented in https://bugs.webkit.org/show_bug.cgi?id=252029
Note You need to log in before you can comment on or make changes to this bug.